Refactor catalog schema to remove legacy JSON columns and enhance EAV usage
- Dropped legacy JSON columns from `gw_channel`, `gw_device_endpoint`, `gw_product_function`, and `gw_device` tables, ensuring the application only recognizes EAV properties.
- Updated various classes to eliminate references to the removed JSON fields, streamlining the codebase and improving clarity.
- Refactored methods in `CatalogEavLoader`, `CatalogFunctionProjection`, and related classes to focus solely on EAV properties.
- Enhanced tests to validate the removal of legacy fields and ensure proper functionality with the updated schema.